gst-libav fails to build against the latest HEAD revision of ffmpeg
While this isn't technically an issue for the supported state, it will be in the near future. Evidently the index_entries member of the AVStream struct has been moved into internal as it was never meant to be publicly visible in the API. As far as I can tell it's the only public exposed instance of AVIndexEntry (so I'm guessing this is likely to be hidden behind the opaque internal pointer in the near future).
Consumers of ffmpeg that use this (likely mythtv does for the keyframe index), will want to speak up and ask for either 1.) A revert of this change or 2.) An API to access this table of keyframes.
I currently did the dirty hack of specifying the internal data structure of the internal struct, but this is sure to change/break and without any guidance from ffmpeg, it will inevitably lead to memory corruption when the structure of the internal pointer changes.