avdemux: fix build with FFmpeg 4.4

Direct access to avstream->index_entries was removed
in favour of the newly added avformat_index_get_entry()
and friends.

Fixes https://gitlab.freedesktop.org/gstreamer/gst-libav/-/issues/85

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-libav/-/merge_requests/129>